WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22648
Fix threading on Qt-port for Sampling tool
https://bugs.webkit.org/show_bug.cgi?id=22648
Summary
Fix threading on Qt-port for Sampling tool
Gabor Loki
Reported
2008-12-04 08:12:54 PST
The Sampling tool fails on Qt-port. The problem is in the implementation of 'waitForThreadCompletion' function (wtf/ThreadingQt.cpp). I am going to attach a patch which could fix this problem on Qt-port.
Attachments
fix waitForThreadCompletion for sampling tool
(2.15 KB, patch)
2008-12-04 08:16 PST
,
Gabor Loki
darin
: review-
Details
Formatted Diff
Diff
fix waitForThreadCompletion for sampling tool (v2)
(2.18 KB, patch)
2008-12-05 02:06 PST
,
Gabor Loki
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gabor Loki
Comment 1
2008-12-04 08:16:39 PST
Created
attachment 25739
[details]
fix waitForThreadCompletion for sampling tool This patch fixes the threading for sampling tool on Qt-port. I've did the same for Gtk, but I didn't test it.
Darin Adler
Comment 2
2008-12-04 09:13:11 PST
Comment on
attachment 25739
[details]
fix waitForThreadCompletion for sampling tool
> + if (result) > + *result = g_thread_join(thread);
I believe this is wrong. Even if we don't want to store the result, we do want to call g_thread_join so we wait for the thread to complete.
Gabor Loki
Comment 3
2008-12-05 02:06:14 PST
Created
attachment 25767
[details]
fix waitForThreadCompletion for sampling tool (v2) You are right. I missed that one. Here is the proposed patch.
Darin Adler
Comment 4
2008-12-05 05:53:18 PST
Comment on
attachment 25767
[details]
fix waitForThreadCompletion for sampling tool (v2) r=me
Holger Freyther
Comment 5
2008-12-11 03:19:40 PST
Landed in
r39204
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug