2008-12-04  Gabor Loki  <loki@inf.u-szeged.hu>

Reviewed by Darin Adler and landed by Holger Freyther.

        <https://bugs.webkit.org/show_bug.cgi?id=22648>
        Fix threading on Qt-port and Gtk-port for Sampling tool.

        * wtf/ThreadingGtk.cpp:
        (WTF::waitForThreadCompletion):
        * wtf/ThreadingQt.cpp:
        (WTF::waitForThreadCompletion):

Canonical link: https://commits.webkit.org/31408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39204 268f45cc-cd09-0410-ab3c-d52691b4dbfc